--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,12 @@
 [package]
 name = "checked_expr"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Sebastian Widua <seppel3210@gmail.com>"]
 description = "a procedural macro for making writing checked_* chains more ergonomic"
+repository = "https://github.com/Seppel3210/checked_expr"
+documentation = "https://docs.rs/checked_expr"
 license = "MIT OR Apache-2.0"
-keywords = ["proc_macro", "checked", "expressions"]
+keywords = ["checked", "arithmetic", "integer", "overflow", "expressions"]
 edition = "2018"
 
 [lib]
